[package]
name = "ruky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.22"
num = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
uzi = { path = "../uzi" }
