[package]
name = "ruky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.16.0", features = ["candle-cuda"] }
clap = { version = "4.5.27", features = ["derive"] }
crossbeam = "0.8.4"
lazy_static = "1.5.0"
log = "0.4.25"
num = "0.4.3"
rand = "0.9.0"
rand_distr = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
simple-logging = "2.0.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
uzi = { path = "../uzi" }
