[package]
name = "ruky"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
wgpu = ["dep:burn-wgpu", "burn/wgpu"]
cuda = ["dep:burn-cuda", "burn/cuda"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", version = "0.19.0", features = ["train"] }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git", version = "0.19.0"}
burn-cuda = { git = "https://github.com/tracel-ai/burn.git", version = "0.19.0", optional = true}
burn-wgpu = { git = "https://github.com/tracel-ai/burn.git", version = "0.19.0", optional = true}
clap = { version = "4.5.27", features = ["derive"] }
crossbeam = "0.8.4"
lazy_static = "1.5.0"
log = "0.4.25"
num = "0.4.3"
num_cpus = "1.16.0"
rand = "0.9.0"
rand_distr = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
simple-logging = "2.0.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "io-std", "io-util", "time"] }
uzi = { path = "../uzi" }
